styles/site.css
/*fonts*/

@font-face {
  font-family: CocogooseUltralight;
  src: url(../fonts/cocogoose/Cocogoose\ Pro\ Ultralight-trial.ttf);
}

@font-face {
  font-family: CocogooseRegular;
  src: url(../fonts/cocogoose/Cocogoose-regular.ttf);
}

@font-face {
  font-family: CocogooseSemiLight;
  src: url(../fonts/cocogoose/Cocogoose\ Pro\ Semilight-trial.ttf);
}

/* Base styles*/

html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  margin: 0;
}

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

:root {
  --grid-cols: 1;
  --grid-rows: 1;
  --grid-height: 4rem;
  --grid-width: 4rem;
  --allLettersHeight: 24em;
  --dropDownWidth: 12.5em;
  --lightThemeBlue: rgb(57, 126, 135);
  --lightThemeGray: rgb(94, 94, 94);
  --lightThemeRed: rgb(231, 150, 150);
  --lightThemeBlack: black;
  --lightThemeBackground: #f7f7f7;
  --lightThemeDropDown: #f2f2f2;
}

p {
  font-size: 0.875rem;
  font-family: CocogooseSemiLight;
  font-weight: 100;
  color: var(--lightThemeBlack);
}

body {
  width: 100vw;
  height: 100vh;
  margin: 0;
}

a {
  font-family: CocoGooseRegular;
  color: var(--lightThemeBlack);
  text-decoration: none;
}

input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;
  margin: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/*grid and layout styles*/

#grid-body-wrapper {
  display: grid;
  max-width: 100%;
  max-height: 100%;
  grid-template-areas:
    "nav"
    "board-input"
    "keyboard"
    "instructions";

  grid-template-rows: 3.125em 60% 40% 0fr;
  grid-template-columns: 1fr;
  overflow: hidden;
}

#grid-board-and-input {
  background-color: var(--lightThemeBackground);
  grid-area: board-input;
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: center;
  align-items: center;
  height: 100%;
}

#grid-board {
  display: grid;
  grid-gap: .3125em;
  width: 100%;
 /* grid-template-rows: repeat(var(--grid-rows), minmax(0, var(--grid-height)));*/
  grid-template-columns: repeat(var(--grid-cols), minmax(0, var(--grid-width)));
  aspect-ratio: var(--grid-cols) / var(--grid-rows);
  max-height: 100%;
}

#grid-board > * {
  background-color: var(--lightThemeGray);
  aspect-ratio: 1/1;
  border-radius: 100%;
  font-size: 2.8125rem;
  font-family: CocogooseRegular;
  text-align: center;
  color: var(--lightThemeBackground);
  }
  /*    font-size: clamp(minimum-size, prefered-size, maximum-size)*/

#grid-board-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 60vh;
  padding: .625em;
}
#input-container {
  background-color: var(--lightThemeBlue);

  display: none;
}

/* mobile overlay styles*/

.overlay .close-overlay{
  position: absolute;
  top: 0.375em;
  right: 0.375em;
  font-size: 3.75rem;
  color: var(--lightThemeBlack);
}

.overlay .close-overlay:hover{
  cursor: pointer;
  color: var(--lightThemeGray);
}
.overlay-content > ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  padding: 0;
  margin: 5%;
}

.overlay-content > ul > li > * {
  margin-bottom: 1em;
}
.overlay a,
.overlay-labels {
  text-decoration: none;
  font-size: 2em;
  color: var(--lightThemeBlack);
  display: block;
  font-family: CocoGooseRegular;

  transition: 0.3s;
}
.overlay {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: var(--lightThemeDropDown);
  opacity: 0.98;
  overflow-x: hidden;
  transition: 0.5s;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.overlay-content > ul > li:nth-child(1),
.overlay-content > ul > li:nth-child(2) {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  height: min-content;
}

.overlay-content {
  width: 100%;
}
/* Alert message styles*/

.overlay-alert-wrapper {
width: 100%;
display: flex;
flex-direction: column;
align-items: center;
opacity: 0;
z-index: -2;

transition-property: opacity;
transition-duration: 1s;

}


.overlay-alert-card{

width: 95%;
height: 12.5em;
background-color: var(--lightThemeRed);
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;



}
.overlay-alert-card>span{

font-family: Cocogooseregular;
}
/*nav styles*/

nav {
  width: 100%;
  grid-area: nav;
  z-index: 1;
  position: relative;
}

nav > ul {
  max-width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: start;
  padding: 0;
  height: 100%;
  margin: 0;
  z-index: 1;
  position: relative;
  background-color: var(--lightThemeBlue);
}

nav > ul > li {
  list-style: none;
  font-family: CocoGooseRegular;
  display: none;
  margin: 0;
  width: 3.125em;
}

nav > ul > li > img {
  width: 50%;
  height: auto;
}

nav > ul > li > ul {
  display: none;
}

.title {
  font-size: 6rem;
  display: block;
  top: -0.5em;
  position: relative;
}

nav > ul > li:nth-child(5) {
  position: absolute;
  right: 1em;
  border: 2px solid var(--lightThemeBlack);
  top: 2em;
  border-radius: 100%;
  height: 4em;
  width: 4em;
  background-color: var(--lightThemeBackground);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

nav > ul > li:nth-child(5):hover {
  background-color: rgb(156, 152, 152);
  cursor: pointer;
}

.number-submit-container {
  margin-right: 0;
}

/*keyboard and miss or hit indicator all letters styles */


#keyboard-container {
  height: 40vh;
  width: 100%;
  max-height: 100%;
}

#keyboard {
  background-color: var(--lightThemeBackground);
  grid-area: keyboard;
  padding: .625em;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.keyboard-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: .375em }
/* ... */

